--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.0",
     "react-scripts": "5.0.1",
     "sass": "^1.77.8",
     "web-vitals": "^2.1.4"
