--- a/package.json
+++ b/package.json
@@ -22,10 +22,6 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -40,6 +36,10 @@
     ]
   },
   "devDependencies": {
-    "@iconify/react": "^5.0.2"
+    "@eslint/js": "^9.8.0",
+    "@iconify/react": "^5.0.2",
+    "eslint": "^9.8.0",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.8.0"
   }
 }
